drm/i915/gen9: Fix FIFO underflows when disabling multiple outputs

Currently on GEN9 if multiple outputs are disabled atomically we'll
program the disabled watermark and DDB values for the 2nd, 3rd pipe to
be disabled too early while the pipes are still active. Fix this by
updating the watermark and DDB values only after all the selected pipes
are disabled already. This fixed FIFO underflows during suspend to ram
and disk on my BXT.

CC: Matt Roper <matthew.d.roper@intel.com>
CC: Ville Syrjälä <ville.syrjala@linux.intel.com>
Reference: https://bugs.freedesktop.org/show_bug.cgi?id=96914
Reference: https://bugs.freedesktop.org/show_bug.cgi?id=96915
Signed-off-by: Imre Deak <imre.deak@intel.com>